GET /api/doctors/my-medical-records Get doctor medical records
